# Nirman-cli

./: README.md  pyproject.toml  structure.md  structure.yaml
.github/workflows/: ci-cd.yml
nirman/: builder.py  cli.py  parser.py  yaml_parser.py
tests/: test_cli_yaml_basic.py  test_cli_yaml_integration.py  test_yaml_parser.py  test_yaml_parser_extended.py
