[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Nirman-cli"
version = "0.1.0"
description = "A CLI tool to create project folder structures from a markdown file."
authors = [{ name="Hemanth Reddy Annem" }]
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[project.scripts]
nirman = "nirman.cli:main"